--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             </svg>
         </button>
         <button>
-
+            Buy now 
+            <svg width="4" height="8">
+                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+            </svg>
         </button>
 
         <nav class="nav">
